{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 91,
  "lineage": "20c38335-8e40-2c6f-e9a3-ea72ec404659",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb39102aa83043ec",
            "arn": "arn:aws:ec2:ap-south-1:654654184378:elastic-ip/eipalloc-0eb39102aa83043ec",
            "association_id": "eipassoc-045b99a5194175c03",
            "domain": "vpc",
            "id": "eipalloc-0eb39102aa83043ec",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-006224ca79e8ca9f0",
            "private_dns": "ip-10-0-0-183.ap-south-1.compute.internal",
            "private_ip": "10.0.0.183",
            "public_dns": "ec2-3-6-77-205.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.77.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01376101673c89611",
            "arn": "arn:aws:ec2:ap-south-1:654654184378:instance/i-0fc4701450af6cfbf",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc4701450af6cfbf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "pradeep",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bedef062dfed98aa",
            "private_dns": "ip-10-0-1-97.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-028aab5f7f565c9ad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c1b11bac4b478c5",
            "tags": {
              "Name": "private-user"
            },
            "tags_all": {
              "Name": "private-user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdf986c32977c7e1"
            ]
          },
          "dependencies": [
            "aws_security_group.user",
            "aws_subnet.dev",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01376101673c89611",
            "arn": "arn:aws:ec2:ap-south-1:654654184378:instance/i-0da8f37bcfe13bff4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da8f37bcfe13bff4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pradeep",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d74950f43a904a3",
            "private_dns": "ip-10-0-0-199.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.199",
            "public_ip": "65.2.140.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c04b959a398277ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0647628d91996c850",
            "tags": {
              "Name": "user"
            },
            "tags_all": {
              "Name": "user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdf986c32977c7e1"
            ]
          },
          "dependencies": [
            "aws_security_group.user",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:internet-gateway/igw-06f022d99feefe109",
            "id": "igw-06f022d99feefe109",
            "owner_id": "654654184378",
            "tags": {
              "Name": "cust-ig"
            },
            "tags_all": {
              "Name": "cust-ig"
            },
            "vpc_id": "vpc-003b5bb924dd71534"
          },
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb39102aa83043ec",
            "association_id": "eipassoc-045b99a5194175c03",
            "connectivity_type": "public",
            "id": "nat-08534d3e894b04643",
            "network_interface_id": "eni-006224ca79e8ca9f0",
            "private_ip": "10.0.0.183",
            "public_ip": "3.6.77.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0647628d91996c850",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "aws_eip.dev",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:route-table/rtb-0a7b1aad68936509d",
            "id": "rtb-0a7b1aad68936509d",
            "owner_id": "654654184378",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08534d3e894b04643",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cust-NAT-rt"
            },
            "tags_all": {
              "Name": "cust-NAT-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-003b5bb924dd71534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev",
            "aws_nat_gateway.dev",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:route-table/rtb-02f8eaf06125a63a2",
            "id": "rtb-02f8eaf06125a63a2",
            "owner_id": "654654184378",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f022d99feefe109",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cust-rt"
            },
            "tags_all": {
              "Name": "cust-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-003b5bb924dd71534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5406ac41c5302dd",
            "route_table_id": "rtb-0a7b1aad68936509d",
            "subnet_id": "subnet-00c1b11bac4b478c5"
          },
          "dependencies": [
            "aws_eip.dev",
            "aws_nat_gateway.dev",
            "aws_route_table.dev",
            "aws_subnet.dev",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c81c165cfdf40a6",
            "route_table_id": "rtb-02f8eaf06125a63a2",
            "subnet_id": "subnet-0647628d91996c850"
          },
          "dependencies": [
            "aws_internet_gateway.user",
            "aws_route_table.user",
            "aws_subnet.user",
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:security-group/sg-0fdf986c32977c7e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdf986c32977c7e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240709044937975200000001",
            "name_prefix": "terraform-",
            "owner_id": "654654184378",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cust-sg"
            },
            "tags_all": {
              "Name": "cust-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-003b5bb924dd71534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:subnet/subnet-00c1b11bac4b478c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c1b11bac4b478c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654184378",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet"
            },
            "tags_all": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-003b5bb924dd71534"
          },
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:subnet/subnet-0647628d91996c850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0647628d91996c850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654184378",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-003b5bb924dd71534"
          },
          "dependencies": [
            "aws_vpc.user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654184378:vpc/vpc-003b5bb924dd71534",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089901af59e9b11f5",
            "default_route_table_id": "rtb-086465849cabcbf54",
            "default_security_group_id": "sg-0c38c9da3fce79312",
            "dhcp_options_id": "dopt-0896e474538331aee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003b5bb924dd71534",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086465849cabcbf54",
            "owner_id": "654654184378",
            "tags": {
              "Name": "cust-vpc"
            },
            "tags_all": {
              "Name": "cust-vpc"
            }
          }
        }
      ]
    }
  ]
}